syntax = "proto3";

package message;

message CrawlerFinishedMessage {
    string datasource_id = 1;
}
